# rust-grpc-db-server

./: Cargo.toml  README.md  build.rs
proto/: users.proto
src/: adapter.rs  app.rs  driver.rs  lib.rs  main.rs  proto.rs
src/adapter/: module.rs  repository.rs
src/adapter/database/: mysql.rs
src/adapter/model/: users.rs
src/adapter/repository/: users.rs
src/app/model/: users.rs
src/app/usecase/: users.rs
src/domain/model/: users.rs
src/domain/repository/: users.rs
src/driver/: modules.rs
src/driver/grpc/: handler.rs
