[package]
name = "grpc-db-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
dotenv = "0.15.0"
async-std = "1.12.0"
async-trait = "0.1.80"
derive-new = "0.6.0"
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["full"]}
sqlx = { version = "0.7.4", features = [ "mysql", "runtime-tokio-native-tls", "chrono" ] }

[build-dependencies]
tonic-build = "0.11"
